--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,6 @@ install:
   - pip install -r requirements.txt
 script:
   - python -m pytest
+  - coverage run -m pytest
+after_success:
+  - coveralls
