--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,6 @@ python:
 install:
   - pip install -r requirements.txt
 script:
-  - python -m pytest
-  - coverage run -m pytest
+  - python -m pytest --cov coveralls
 after_success:
   - coveralls
