--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ python:
 install:
   - pip install -r requirements.txt
 script:
-  - python -m pytest --cov coveralls
+  - python -m pytest
+  - coverage -m pytest
 after_success:
   - coveralls
