--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ install:
   - pip install -r requirements.txt
 script:
   - python -m pytest
-  - coverage -m pytest
+  - coverage run -m pytest
 after_success:
   - coveralls
