--- a/docs/apispecs.yaml
+++ b/docs/apispecs.yaml
@@ -1,20 +1,32 @@
 openapi: 3.0.0
-basePath: "/api/v1"
+swagger: "3.0"
+
+servers:
+  - url: "/api/v1"
+    description: Age of Empires II API
+
 schemes:
   - https
+
 info:
-  description: "Simple API to retrieve resources related to Age of Empires II. The base URL for retrieving the resources is /api/v1"
   title: "Age Of Empires II API"
+  description: "Simple API to retrieve resources related to Age of Empires II. The base URL for retrieving the resources is /api/v1"
   version: 1.0.0
   license:
     name: "License: BSD-3-Clause"
     url: "https://github.com/aalises/age-of-empires-II-api/blob/master/LICENSE"
+  contact:
+    name: Albert Alises Sorribas
+
 externalDocs:
   description: "Project repository"
   url: "https://github.com/aalises/age-of-empires-II-api"
+
 produces:
   - "application/json"
+
 paths:
+  #Civilizations
   "/civilizations":
     get:
       summary: Gets a list of all the civilizations
@@ -23,13 +35,17 @@ paths:
       produces:
         - application/json
       description: Gets a list of all the civilizations in AOE2
+      operationId: "civilizations"
       responses:
         "200":
           description: "Civilizations Response"
-          schema:
-            $ref: "#/definitions/CivilizationList"
+          content:
+            application/json:
+              schema:
+                $ref: "#/definitions/CivilizationList"
         default:
           description: "Unexpected Error"
+
   "/civilization/{id}":
     get:
       summary: Gets a given civilization by ID or name
@@ -38,24 +54,32 @@ paths:
       produces:
         - application/json
       description: "Gets a given civilization by ID (Integer) or name (String with spaces replaced with hyphens/underscores)"
-      operationId: "Find civilization by id"
+      operationId: "civilization.id"
       parameters:
         - name: "id"
           in: "path"
           description: "ID or name of the civilization to fetch"
           required: true
-          type: "string"
+          schema:
+            type: "string"
+            example: '4'
       responses:
         "200":
           description: "Civilization Response"
-          schema:
-            $ref: "#/definitions/Civilization"
+          content:
+            application/json:
+              schema:
+                $ref: "#/definitions/Civilization"
         "404":
           description: "Civilization not found"
-          schema:
-            $ref: "#/definitions/NotFoundError"
+          content:
+            application/json:
+              schema:
+                $ref: "#/definitions/NotFoundError"
         default:
           description: "Unexpected Error"
+
+  #Units
   "/units":
     get:
       summary: Gets a list of all the units
@@ -64,13 +88,17 @@ paths:
       produces:
         - application/json
       description: Gets a list of all the units in AOE2
+      operationId: "units"
       responses:
         "200":
           description: "Units Response"
-          schema:
-            $ref: "#/definitions/UnitList"
+          content:
+            application/json:
+              schema:
+                $ref: "#/definitions/UnitList"
         default:
           description: "Unexpected Error"
+
   "/unit/{id}":
     get:
       summary: Gets a given unit by ID or name
@@ -79,24 +107,32 @@ paths:
       produces:
         - application/json
       description: "Gets a given unit by ID (Integer) or name (String with spaces replaced with hyphens/underscores)"
-      operationId: "Find unit by id"
+      operationId: "units.id"
       parameters:
         - name: "id"
           in: "path"
           description: "ID or name of the unit to fetch"
           required: true
-          type: "string"
+          schema:
+            type: "string"
+            example: '4'
       responses:
         "200":
           description: "Unit Response"
-          schema:
-            $ref: "#/definitions/Unit"
+          content:
+            application/json:
+              schema:
+                $ref: "#/definitions/Unit"
         "404":
           description: "Unit not found"
-          schema:
-            $ref: "#/definitions/NotFoundError"
+          content:
+            application:json:
+              schema:
+                $ref: "#/definitions/NotFoundError"
         default:
           description: "Unexpected Error"
+
+  #Structures
   "/structures":
     get:
       summary: Gets a list of all the structures
@@ -105,13 +141,17 @@ paths:
       produces:
         - application/json
       description: Gets a list of all the structures in AOE2
+      operationId: structures
       responses:
         "200":
           description: "Structures Response"
-          schema:
-            $ref: "#/definitions/StructureList"
+          content:
+            application:json:
+              schema:
+                $ref: "#/definitions/StructureList"
         default:
           description: "Unexpected Error"
+
   "/structure/{id}":
     get:
       summary: Gets a given structure by ID or name
@@ -120,24 +160,32 @@ paths:
       produces:
         - application/json
       description: "Gets a given structure by ID (Integer) or name (String with spaces replaced with hyphens/underscores)"
-      operationId: "Find structure by id"
+      operationId: "structure.id"
       parameters:
         - name: "id"
           in: "path"
           description: "ID or name of the structure to fetch"
           required: true
-          type: "string"
+          schema:
+            type: "string"
+            example: '5'
       responses:
         "200":
           description: "Structure Response"
-          schema:
-            $ref: "#/definitions/Structure"
+          content:
+            application:json:
+              schema:
+                $ref: "#/definitions/Structure"
         "404":
           description: "Structure not found"
-          schema:
-            $ref: "#/definitions/NotFoundError"
+          content:
+            application:json:
+              schema:
+                $ref: "#/definitions/NotFoundError"
         default:
           description: "Unexpected Error"
+
+  #Technologies
   "/technologies":
     get:
       summary: Gets a list of all the technologies
@@ -146,13 +194,17 @@ paths:
       produces:
         - application/json
       description: Gets a list of all the technologies in AOE2
+      operationId: "technologies"
       responses:
         "200":
           description: "Technologies Response"
-          schema:
-            $ref: "#/definitions/TechnologyList"
+          content:
+            application:json:
+              schema:
+                $ref: "#/definitions/TechnologyList"
         default:
           description: "Unexpected Error"
+  
   "/technology/{id}":
     get:
       summary: Gets a given technology by ID or name
@@ -161,22 +213,28 @@ paths:
       produces:
         - application/json
       description: "Gets a given technology by ID (Integer) or name (String with spaces replaced with hyphens/underscores)"
-      operationId: "Find technology by id"
+      operationId: "technology.id"
       parameters:
         - name: "id"
           in: "path"
           description: "ID or name of the technology to fetch"
           required: true
-          type: "string"
+          schema:
+            type: "string"
+            example: '3'
       responses:
         "200":
           description: "Technology Response"
-          schema:
-            $ref: "#/definitions/Technology"
+          content:
+            application/json:
+              schema:
+                $ref: "#/definitions/Technology"
         "404":
           description: "Technology not found"
-          schema:
-            $ref: "#/definitions/NotFoundError"
+          content:
+            application/json:
+              schema:
+                $ref: "#/definitions/NotFoundError"
         default:
           description: "Unexpected Error"
 
@@ -448,5 +506,3 @@ definitions:
       Gold:
         type: integer
         description: How much gold it costs
-
-swagger: "3.0"
